
pandoc-tablenos 0.11 (unreleased)

    * Added tagged tables (Issue #3)


pandoc-tablenos 0.10 (2016-05-15)

    * Added clever referencing.
    * Moved library code to pandocxnos project.
    * Fixed numbering of unreferenceable tables (Issue #1).
    * Fixed broken attribute parsing (Issue #2).
    * Improved pandoc version detection.


pandoc-tablenos 0.9 (2016-04-19)

    * Better pandoc version detection.
    * Significant refactoring.


pandoc-tablenos 0.8 (2016-04-05)

    * Fixed broken installation in Win 10 (pandoc-eqnos Issue #6).


pandoc-tablenos 0.7.1 (2016-01-24):

    * Added regression tests.

    * Fixed bug discovered during regression testing for pandoc 1.15.


pandoc-tablenos 0.7 (2016-01-23)

    * Fixed AttributeError bug that occurred for links
      emphasized [*like this*](http://example.com/).

    * More work on autolink_bare_uris processing.


pandoc-tablenos 0.6.1 (2016-01-13)

    * Fixed AttributeError bug that occurred for links
      emphasized [*like this*](http://example.com/)

    * Fixed TypeError bug that occurred with pandoc < 1.16.


pandoc-tablenos 0.6 (2016-01-11)

    * Fixed problems when --autolink_bare_uris is used.


pandoc-tablenos 0.5 (2016-01-01)

    * Flush stdout before exiting.


pandoc-tablenos 0.4 (2015-12-30)

    * Fixed treatment of curly-braced references in lists.


pandoc-tablenos 0.3 (2015-07-17)

    * Construct links for html.


pandoc-tablenos 0.2 (2015-07-15)

    * Enforce pandoc's requirement of UTF-8.


pandoc-tablenos 0.1.1 (2015-06-07)

    * Fixed README.


pandoc-tablenos 0.1 (2015-06-07)

    * initial release
